[gd_scene load_steps=34 format=1]

[ext_resource path="res://src/screens/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://src/screens/menu/scn1_menu_gametitle_EN.png" type="Texture" id=2]
[ext_resource path="res://src/screens/menu/scn1_menu_bg.png" type="Texture" id=3]
[ext_resource path="res://src/objects/castle_ship_floating/ship_float_castle.png" type="Texture" id=4]
[ext_resource path="res://src/objects/thruster/thruster.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/screens/menu/splash_screen_lochzahn_single_scn1.png" type="Texture" id=6]
[ext_resource path="res://src/screens/menu/skull_eye.png" type="Texture" id=7]
[ext_resource path="res://src/screens/menu/skull_eye.gd" type="Script" id=8]
[ext_resource path="res://src/objects/waterdrops/waterdrop.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/screens/menu/splash_screen_lochzahn_candy_hat.png" type="Texture" id=10]
[ext_resource path="res://src/fonts/newsgeek20.fnt" type="BitmapFont" id=11]
[ext_resource path="res://src/fonts/newsgeek16.fnt" type="BitmapFont" id=12]
[ext_resource path="res://src/audio/music_player/music_player.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/audio/music/scn1_menu_music.ogg" type="AudioStream" id=14]
[ext_resource path="res://src/audio/sfx/sfx.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/screens/menu/options_screen.gd" type="Script" id=16]
[ext_resource path="res://src/fonts/berry12.fnt" type="BitmapFont" id=17]
[ext_resource path="res://src/fonts/berry8.fnt" type="BitmapFont" id=18]
[ext_resource path="res://src/screens/menu/ui_templates/tab_styleboxflat.tres" type="StyleBox" id=19]
[ext_resource path="res://src/screens/menu/ui_templates/tab_panel_flat.tres" type="StyleBox" id=20]
[ext_resource path="res://src/fonts/berry16.fnt" type="BitmapFont" id=21]
[ext_resource path="res://src/screens/menu/ui_templates/button_theme.tres" type="Theme" id=22]
[ext_resource path="res://src/screens/global-ui-templates/menu_buttons.tres" type="StyleBox" id=23]
[ext_resource path="res://src/fonts/menufont_24.fnt" type="BitmapFont" id=24]
[ext_resource path="res://src/screens/ui-icons/icon-font-18/PNG/untitled-e90d.png" type="Texture" id=25]
[ext_resource path="res://src/screens/menu/donate_button.tex" type="Texture" id=26]
[ext_resource path="res://src/screens/menu/close_button.png" type="Texture" id=27]
[ext_resource path="res://src/screens/menu/texture-button-character-card.png" type="Texture" id=28]

[sub_resource type="Animation" id=1]

resource/name = "gametitle_animations"
length = 4.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("gametitle:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4, 0.5 ),
"transitions": FloatArray( 4, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 359, -90 ), Vector2( 359, 100 ), Vector2( 359, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("keyvisual_lochzahn:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("splashscreen_schiff:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 595.2, 280.4 ), Vector2( -274, 162 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("splashscreen_schiff/splashscreen_schiff1:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15.6, 5.45 ), Vector2( 102.347, 22.0765 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("splashscreen_schiff/splashscreen_schiff1:transform/scale")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 3.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.4, 0.4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../character-cards:rect/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 1.15, 1.35, 1.4, 1.45, 1.55, 1.65, 1.75, 1.8 ),
"transitions": FloatArray( 0.25, 0.25, 4, 4, 1, 1, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 168, -136 ), Vector2( 168, 136 ), Vector2( 168, 140 ), Vector2( 168, 144 ), Vector2( 168, 136 ), Vector2( 168, 144 ), Vector2( 168, 141 ), Vector2( 168, 144 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../character-cards:rect/rotation")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]

resource/name = "wigglecandy"
length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("keyvisual_lochzahn/candy_skull_button/candy_skull:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28 ),
"transitions": FloatArray( -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25, -0.25 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0, -20.0, 0.0, 0.0, 20.0, 0.0, -20.0, 0.0, 0.0, 20.0, 0.0, -20.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("keyvisual_lochzahn/candy_skull_button/candy_skull:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.28 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.768627, 0.615686, 0.415686, 1 )
light_color = Color( 0.768627, 0.615686, 0.415686, 1 )
dark_color = Color( 0.574219, 0.458553, 0.307297, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Theme" id=4]

default_font = ExtResource( 18 )
Button/colors/font_color = Color( 0.478431, 0.352941, 0.321569, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 3
Button/fonts/font = ExtResource( 17 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = null
TabContainer/colors/font_color_bg = Color( 0.632812, 0.517127, 0.365845, 1 )
TabContainer/colors/font_color_fg = Color( 0.941176, 0.941176, 0.941176, 1 )
TabContainer/constants/hseparation = 10
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 19
TabContainer/fonts/font = ExtResource( 18 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_hilite = null
TabContainer/icons/increment = null
TabContainer/icons/increment_hilite = null
TabContainer/icons/menu = null
TabContainer/icons/menu_hilite = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_fg = null

[sub_resource type="GDScript" id=5]

script/source = "extends Control

func _ready():
	pass
	
func _process(delta):
	if get_children().size()>0 && !get_children()[0].has_focus():
		get_children()[0].grab_focus()
		set_process(false)"

[node name="main_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
game_title_path = NodePath("art/gametitle")
menu_buttons_path = NodePath("menu_buttons")
options_screen_path = NodePath("options_screen")
music_player_path = NodePath("music_player")
music_volume_slider_path = NodePath("options_screen/settings/Audio/vbox/hbox/volume_slide")
animations_path = NodePath("art/anims")

[node name="art" type="Node2D" parent="."]

[node name="gametitle" type="Sprite" parent="art"]

editor/display_folded = true
transform/pos = Vector2( 359, -90 )
z/z = 1
texture = ExtResource( 2 )
region_rect = Rect2( 8, 1, 264, 152 )

[node name="gametitle1" type="Sprite" parent="art/gametitle"]

transform/pos = Vector2( 0, 3 )
z/z = -1
texture = ExtResource( 2 )
modulate = Color( 0, 0, 0, 0.371608 )
region_rect = Rect2( 8, 1, 264, 152 )

[node name="bg" type="Node2D" parent="art"]

editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="splashscreen_bg" type="Sprite" parent="art/bg"]

transform/pos = Vector2( 256, 144 )
z/z = -1
texture = ExtResource( 3 )

[node name="splashscreen_schiff" type="Sprite" parent="art"]

transform/pos = Vector2( 595.2, 280.4 )
transform/scale = Vector2( 0.8, 0.8 )
z/z = 3
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="splashscreen_schiff1" type="Sprite" parent="art/splashscreen_schiff"]

transform/pos = Vector2( 15.6, 5.45 )
transform/scale = Vector2( 0.8, 0.8 )
z/z = 2
z/relative = false
texture = ExtResource( 4 )
modulate = Color( 0, 0, 0, 0.326798 )

[node name="thruster" parent="art/splashscreen_schiff" instance=ExtResource( 5 )]

transform/pos = Vector2( 85.0126, 23.0998 )
transform/rot = -94.9
transform/scale = Vector2( 1, -1.78624 )
config/process_mode = 1
config/flip_h = true

[node name="anims" type="AnimationPlayer" parent="art"]

process/pause_mode = 1
playback/process_mode = 1
playback/default_blend_time = 1.0
root/root = NodePath("..")
anims/gametitle_animations = SubResource( 1 )
anims/wigglecandy = SubResource( 2 )
playback/active = true
playback/speed = 0.5
blend_times = [  ]
autoplay = "gametitle_animations"

[node name="keyvisual_lochzahn" type="Sprite" parent="art"]

transform/pos = Vector2( 239, 146 )
transform/scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="skull_eye" type="Sprite" parent="art/keyvisual_lochzahn"]

transform/pos = Vector2( -107, 83 )
z/z = 2
texture = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="skull_eye1" type="Sprite" parent="art/keyvisual_lochzahn"]

transform/pos = Vector2( -123, 81 )
z/z = 2
texture = ExtResource( 7 )
script/script = ExtResource( 8 )

[node name="waterdrop" parent="art/keyvisual_lochzahn" instance=ExtResource( 9 )]

transform/pos = Vector2( -180.023, -41.2257 )
transform/scale = Vector2( 1, 1.3446 )

[node name="candy_skull_button" type="TextureButton" parent="art/keyvisual_lochzahn"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -125.0
margin/top = -129.0
margin/right = -85.0
margin/bottom = -89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="candy_skull" type="Sprite" parent="art/keyvisual_lochzahn/candy_skull_button"]

transform/pos = Vector2( 19, 17 )
texture = ExtResource( 10 )
hframes = 2

[node name="menu_buttons" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
size_flags/stretch_ratio = 2.0
margin/left = -312.0
margin/top = -160.0
margin/right = -492.0
margin/bottom = -289.0
alignment = 1

[node name="startbutton" type="Button" parent="menu_buttons"]

visibility/blend_mode = 2
rect/min_size = Vector2( 180, 43 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 23.0
margin/right = 180.0
margin/bottom = 66.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start Game"
flat = false

[node name="optionsbutton" type="Button" parent="menu_buttons"]

visibility/blend_mode = 2
rect/min_size = Vector2( 150, 35 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 180.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 12 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options / Info"
flat = false

[node name="music_player" parent="." instance=ExtResource( 13 )]

stream/stream = ExtResource( 14 )

[node name="sfx" parent="." instance=ExtResource( 15 )]

[node name="options_screen" type="Node2D" parent="."]

visibility/visible = false
z/z = 5
script/script = ExtResource( 16 )

[node name="settings" type="TabContainer" parent="options_screen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 0.0
margin/top = 16.0
margin/right = 510.0
margin/bottom = 290.0
custom_styles/tab_fg = ExtResource( 19 )
custom_styles/panel = ExtResource( 20 )
tab_align = 0
tabs_visible = true

[node name="Instructions" type="Tabs" parent="options_screen/settings"]

anchor/right = 1
anchor/bottom = 1
focus_neighbour/right = NodePath("../Debug")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 23.0
margin/right = 12.0
margin/bottom = 1.0

[node name="instruction_text" type="RichTextLabel" parent="options_screen/settings/Instructions"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 14.0
margin/right = 16.0
margin/bottom = 32.0
custom_fonts/normal_font = ExtResource( 18 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Welcome to Captain Holetooth!

CONTROLS

	R = Reset game and scores

	Arrow Keys left/right = Move left and right

	Arrow Key up = Jump up

	Space  = Shoot
	
Enjoy :)"
visible_characters = -1
percent_visible = 1.0

[node name="Debug" type="Tabs" parent="options_screen/settings"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 23.0
margin/right = 12.0
margin/bottom = 1.0
custom_styles/tab_fg = ExtResource( 19 )
custom_fonts/font = ExtResource( 21 )
script/script = SubResource( 5 )

[node name="jump_scn3" type="Button" parent="options_screen/settings/Debug"]

focus_neighbour/top = NodePath("../jump_minigame")
focus_neighbour/bottom = NodePath("../jump_scn4")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 22 )
margin/left = 4.0
margin/top = 10.0
margin/right = 246.0
margin/bottom = 42.0
custom_fonts/font = ExtResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Forest Level"
flat = false

[node name="jump_scn4" type="Button" parent="options_screen/settings/Debug"]

focus_neighbour/top = NodePath("../jump_scn3")
focus_neighbour/bottom = NodePath("../jump_scn5")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 22 )
margin/left = 4.0
margin/top = 50.0
margin/right = 246.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Mountain Level"
flat = false

[node name="jump_scn5" type="Button" parent="options_screen/settings/Debug"]

focus_neighbour/top = NodePath("../jump_scn4")
focus_neighbour/bottom = NodePath("../jump_castle")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 22 )
margin/left = 4.0
margin/top = 91.0
margin/right = 246.0
margin/bottom = 123.0
custom_fonts/font = ExtResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fly home Level"
flat = false

[node name="jump_castle" type="Button" parent="options_screen/settings/Debug"]

focus_neighbour/bottom = NodePath("../jump_minigame")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 22 )
margin/left = 4.0
margin/top = 130.0
margin/right = 246.0
margin/bottom = 162.0
custom_fonts/font = ExtResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Castle Level"
flat = false

[node name="jump_minigame" type="Button" parent="options_screen/settings/Debug"]

focus_neighbour/top = NodePath("../jump_castle")
focus_neighbour/bottom = NodePath("../jump_scn3")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 22 )
margin/left = 4.0
margin/top = 178.0
margin/right = 246.0
margin/bottom = 210.0
custom_fonts/font = ExtResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play \"Yan Kandy\" Minigame"
flat = false

[node name="Parental Controls" type="Tabs" parent="options_screen/settings"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 23.0
margin/right = 12.0
margin/bottom = 1.0

[node name="instruction_text" type="RichTextLabel" parent="options_screen/settings/Parental Controls"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 14.0
margin/right = 16.0
margin/bottom = 32.0
custom_fonts/normal_font = ExtResource( 18 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = true
bbcode/bbcode = "Hello parents!
You are able to limit the daily playtime here and set the parental code.
If you have more questions go to [url=https://www.hirnbix.com/parentalcontrols]https://www.hirnbix.com/parentalcontrols[/url]"
visible_characters = -1
percent_visible = 1.0

[node name="playtime_settings" type="HBoxContainer" parent="options_screen/settings/Parental Controls"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 66.0
margin/right = 468.0
margin/bottom = 91.0
alignment = 0

[node name="playtime_limit_label" type="Label" parent="options_screen/settings/Parental Controls/playtime_settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 6.0
margin/right = 218.0
margin/bottom = 18.0
text = "Adjust the duration of gameplay (in minutes)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playtime_limit" type="LineEdit" parent="options_screen/settings/Parental Controls/playtime_settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 222.0
margin/top = 1.0
margin/right = 268.0
margin/bottom = 23.0
placeholder/alpha = 0.6
max_length = 2
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="playtime_confirm" type="Button" parent="options_screen/settings/Parental Controls/playtime_settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 272.0
margin/top = 0.0
margin/right = 359.0
margin/bottom = 25.0
custom_styles/pressed = ExtResource( 23 )
custom_styles/normal = ExtResource( 23 )
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Confirm"
icon = ExtResource( 25 )
flat = false

[node name="Audio" type="Tabs" parent="options_screen/settings"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 23.0
margin/right = 12.0
margin/bottom = 1.0

[node name="vbox" type="VBoxContainer" parent="options_screen/settings/Audio"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="hbox" type="HBoxContainer" parent="options_screen/settings/Audio/vbox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 486.0
margin/bottom = 16.0
custom_constants/separation = 20
alignment = 0

[node name="music_volume_label" type="Label" parent="options_screen/settings/Audio/vbox/hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 2.0
margin/right = 68.0
margin/bottom = 14.0
text = "Music Volume:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="volume_slide" type="HSlider" parent="options_screen/settings/Audio/vbox/hbox"]

rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 88.0
margin/top = 0.0
margin/right = 188.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="hbox1" type="HBoxContainer" parent="options_screen/settings/Audio/vbox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 20.0
margin/right = 486.0
margin/bottom = 36.0
custom_constants/separation = 20
alignment = 0

[node name="Sound_volume_label" type="Label" parent="options_screen/settings/Audio/vbox/hbox1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 2.0
margin/right = 72.0
margin/bottom = 14.0
text = "Sound Volume:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="volume_slide" type="HSlider" parent="options_screen/settings/Audio/vbox/hbox1"]

rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 92.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Credits" type="Tabs" parent="options_screen/settings"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 23.0
margin/right = 12.0
margin/bottom = 1.0
custom_fonts/font = ExtResource( 21 )

[node name="credits_text" type="RichTextLabel" parent="options_screen/settings/Credits"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
custom_fonts/normal_font = ExtResource( 18 )
custom_colors/default_color = Color( 0.996078, 0.905882, 0.729412, 1 )
bbcode/enabled = false
bbcode/bbcode = "Programming
	Oliver Ruehl
	Yasha Bo
	Ivan Skodje

Game concept, Graphics
	Oliver Ruehl

Sound and music in minigame
	freeman

Music
	Public Domain"
visible_characters = -1
percent_visible = 1.0

[node name="donate_button" type="TextureButton" parent="options_screen/settings/Credits"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 267.0
margin/top = 139.0
margin/right = 603.0
margin/bottom = 287.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 26 )
params/resize_mode = 0
params/scale = Vector2( 0.6, 0.6 )
params/stretch_mode = 0

[node name="Polygon2D" type="Polygon2D" parent="options_screen"]

z/z = -1
polygon = Vector2Array( -10, -10, -10, 300, 520, 300, 520, -10 )
uv = Vector2Array(  )
color = Color( 0.27451, 0.156863, 0.211765, 0.876349 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_group_": true
}

[node name="exitbutton" type="TextureButton" parent="options_screen"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -448.0
margin/top = 22.0
margin/right = -488.0
margin/bottom = -18.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="character-cards" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = -136.0
margin/right = 192.0
margin/bottom = -48.0

[node name="character-cards-button" type="TextureButton" parent="character-cards"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -56.0
margin/top = 49.0
margin/right = -120.0
margin/bottom = -33.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 28 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="art/keyvisual_lochzahn/candy_skull_button" to="." method="_on_candy_skull_button_pressed"]

[connection signal="pressed" from="menu_buttons/startbutton" to="." method="_on_startbutton_pressed"]

[connection signal="pressed" from="menu_buttons/optionsbutton" to="." method="_on_optionsbutton_pressed"]

[connection signal="tab_changed" from="options_screen/settings" to="options_screen" method="_on_settings_tab_changed"]

[connection signal="pressed" from="options_screen/settings/Debug/jump_scn3" to="." method="_on_jump_scn3_pressed"]

[connection signal="pressed" from="options_screen/settings/Debug/jump_scn4" to="." method="_on_jump_scn4_pressed"]

[connection signal="pressed" from="options_screen/settings/Debug/jump_scn5" to="." method="_on_jump_scn5_pressed"]

[connection signal="pressed" from="options_screen/settings/Debug/jump_castle" to="." method="_on_jump_castle_pressed"]

[connection signal="pressed" from="options_screen/settings/Debug/jump_minigame" to="." method="_on_jump_minigame_pressed"]

[connection signal="pressed" from="options_screen/settings/Parental Controls/playtime_settings/playtime_confirm" to="." method="_on_playtime_confirm_pressed"]

[connection signal="value_changed" from="options_screen/settings/Audio/vbox/hbox/volume_slide" to="." method="_on_music_volume_value_changed"]

[connection signal="pressed" from="options_screen/settings/Credits/donate_button" to="." method="_on_donate_button_pressed"]

[connection signal="pressed" from="options_screen/exitbutton" to="." method="_on_exitbutton_pressed"]

[connection signal="pressed" from="character-cards/character-cards-button" to="." method="_on_charactercardsbutton_pressed"]


